# Aether-

./: CMakeLists.txt  README.md
engine_src/: AnimationObject.cpp  AnimationObject.h  CMakeLists.txt  Engine.cpp  Engine.h  RenderObject.h  Renderer.cpp  Renderer.h  ResourceManager.h  Wrapper.h
resources/: maps.json  player_sprite.json  tilesheet.json
src/: CMakeLists.txt  Game.cpp  Game.h  Map.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Tile.h  Window.cpp  Window.h  main.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  testEngine.cpp
